KQL 101 more pictures

--- a/_posts/KC7/KQL 101/2025-07-18-KQL101.md
+++ b/_posts/KC7/KQL 101/2025-07-18-KQL101.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "KQL 101 – KC7 Cyber Challenge"
+title: "KQL 101, A Scandal in Valdoria – KC7 Cyber Challenge"
 date: 2025-07-18 10:00:00 -0700
 categories: [SOC, Blue Team, Threat Hunting]
 tags: [KC7, KQL, Microsoft Sentinel, Detection, Blue Team]
@@ -14,7 +14,7 @@ The **KQL 101** section is the first part of the [KC7 Cyber Challenge Module 132
 ### 📚 Module Structure
 
 This challenge is divided into four parts:
-1. **KQL 101** *(This write-up focuses here)*
+1. **KQL 101** 
 2. Welcome to Valdoria!
 3. Plenty of Phish
 4. A Scandal
@@ -114,23 +114,61 @@ You can use the distinct operator to find unique values in a specific column.
 
 ![Desktop View](/assets/img/KQL101/7.png){: width="700" height="400" }
 
+---
+
 ### How many distinct domains in the PassiveDns records contain the word “hire”?
+
+---
 
 ![Desktop View](/assets/img/KQL101/8.png){: width="700" height="400" }
 
+---
 
+### What IPs did the domain “jobhire.org” resolve to (enter any one of them)?
 
+![Desktop View](/assets/img/KQL101/9.png){: width="700" height="400" }
 
+---
 
+### How many distinct websites did employees with the first name "Mary" Visit?
 
+![Desktop View](/assets/img/KQL101/10.png){: width="700" height="400" }
 
+---
 
+### How many authentication attempts did we see to the accounts of employees with the first name Mary?
 
+![Desktop View](/assets/img/KQL101/11.png){: width="700" height="400" }
 
+---
 
+## Section 2: Welcome to Valdoria
 
+1. As a first step, you reach out to the Editorial Director Nene Leaks to ask for more information
 
+![Desktop View](/assets/img/KQL101/12.png){: width="700" height="400" }
 
+### What is the Newspaper Printer's name?
+
+`Clark Kent`
+
+---
+
+### What is the Editorial Intern's name?
+
+![Desktop View](/assets/img/KQL101/13.png){: width="700" height="400" }
+
+`Ronnie McLovin`
+
+---
+
+### When was the Editorial Intern hired at The Valdorian Times?
+
+`1/2/2024, 8:00:00 AM`
+
+---
+
+![Desktop View](/assets/img/KQL101/14.png){: width="700" height="400" }
 
 
 
