Fully fixed errors with KQL 101

--- a/_posts/KC7/KQL 101/2025-07-18-KQL101.md
+++ b/_posts/KC7/KQL 101/2025-07-18-KQL101.md
@@ -124,6 +124,58 @@ You can use the distinct operator to find unique values in a specific column.
 
 ---
 
+### What IPs did the domain “jobhire.org” resolve to (enter any one of them)?
+
+![Desktop View](/assets/img/KQL101/17.png){: width="700" height="400" }
+
+---
+
+### How many distinct websites did employees with the first name "Mary" Visit?
+
+![Desktop View](/assets/img/KQL101/18.png){: width="700" height="400" }
+
+---
+
+### How many authentication attempts did we see to the accounts of employees with the first name Mary?
+
+![Desktop View](/assets/img/KQL101/19.png){: width="700" height="400" }
+
+---
+
+## Section 2: Welcome to Valdoria
+
+1. As a first step, you reach out to the Editorial Director Nene Leaks to ask for more information
+
+![Desktop View](/assets/img/KQL101/20.png){: width="700" height="400" }
+
+### What is the Newspaper Printer's name?
+
+`Clark Kent`
+
+---
+
+### What is the Editorial Intern's name?
+
+![Desktop View](/assets/img/KQL101/21.png){: width="700" height="400" }
+
+`Ronnie McLovin`
+
+---
+
+![Desktop View](/assets/img/KQL101/22.png){: width="700" height="400" }
+
+---
+
+### How many total emails has Clark Kent received?
+
+![Desktop View](/assets/img/KQL101/23.png){: width="700" height="400" }
+
+---
+
+### When was the Editorial Intern hired at The Valdorian Times?
+
+`1/2/2024, 8:00:00 AM`
+
 Review the emails sent to Clark Kent for the one sent on January 31, 2024 containing the final edits for the election OpEd.
 
 > **Note**
