--- a/_posts/KC7/KQL 101/2025-07-18-KQL101.md
+++ b/_posts/KC7/KQL 101/2025-07-18-KQL101.md
@@ -675,5 +675,8 @@ Query ProcessEvents for all devices at Valdorian Times.
 
 #### Was data stolen from any other devices and uploaded to hirejob.com? (yes/no)
 
+![Desktop View](/assets/img/KQL101/42.png){: width="700" height="400" }
 
+---
 
+## Congratulations! You've completed your investigation.
