--- a/_posts/TryHackMe/REMnux/2025-07-29-REMnux.md
+++ b/_posts/TryHackMe/REMnux/2025-07-29-REMnux.md
@@ -78,3 +78,16 @@ Let's break it down!
 
 To summarize, when the document `agenttesla.xlsm` is opened, a Macro will run! This Macro contains a VBA script. The script will run and will be running a PowerShell to download a file named `Doc-3737122pdf.exe` from `http://193.203.203.67/rt/`, save it to a variable $TempFile, then execute or start running the file inside this variable, which is a binary or a .exe file (`Doc-3737122pdf.exe`). This is a usual technique used by threat actors to avoid early detection. Pretty nasty, right?!
 
+---
+
+### Challenge
+
+#### Using the tool, scan another file named possible_malicious.docx located in the /home/ubuntu/Desktop/tasks/agenttesla/ directory. How many data streams were presented for this file?
+
+![Desktop View](/assets/img/REMnux/1.png){: width="700" height="400" }
+
+`16`
+
+#### Using the tool, scan another file named possible_malicious.docx located in the /home/ubuntu/Desktop/tasks/agenttesla/ directory. At what data stream number does the tool indicate a macro present?
+
+`8`
