--- a/_posts/TryHackMe/REMnux/2025-07-29-REMnux.md
+++ b/_posts/TryHackMe/REMnux/2025-07-29-REMnux.md
@@ -91,3 +91,77 @@ To summarize, when the document `agenttesla.xlsm` is opened, a Macro will run! T
 #### Using the tool, scan another file named possible_malicious.docx located in the /home/ubuntu/Desktop/tasks/agenttesla/ directory. At what data stream number does the tool indicate a macro present?
 
 `8`
+
+---
+
+## Fake Network to Aid Analysis
+
+uring dynamic analysis, it is essential to observe the behaviour of potentially malicious software—especially its network activities. There are many approaches to this. We can create a whole infrastructure, a virtual environment with different core machines, and more. Alternatively, there is a tool inside our REMnux VM called INetSim: Internet Services Simulation Suite!
+
+We will utilize INetSim's features to simulate a real network in this task.
+
+
+> **Virtual Machines Notes**
+> For this task, we will use two (2) machines. The first is our REMnux machine, which is linked to the Machine Access Task. The second VM is the AttackBox. To start the AttackBox, click the blue Start AttackBox button at the top of the page. Do note that you can easily switch between boxes by clicking on them. See the highlighted box in the below image.
+
+### INetSim
+
+Before we start, we must configure the tool INetSim inside our REMnux VM. Do not worry; this is a simple change of configuration. First, check the IP address assigned to your machine. This can be seen using the command `ifconfig` or simply by checking the IP address after the ubuntu@ from the terminal. The IP addresses may vary.
+
+Here, the machine’s IP is `10.10.177.172`. Take note of this, as we will need it.
+
+Next, we need to change the INetSim configuration by running this command sudo nano `/etc/inetsim/inetsim.conf` and look for the value `#dns_default_ip 0.0.0.0`.
+
+Remove the comment or #, then change the value of dns_default_ip from `0.0.0.0` to the machine’s IP address you have identified earlier.
+
+![Desktop View](/assets/img/REMnux/2.png){: width="700" height="400" }
+
+Confirm that the changes have been successful by checking the value of dns_default_ip using this command `cat /etc/inetsim/inetsim.conf | grep dns_default_ip`
+
+Finally, run the command sudo inetsim to start the tool.
+
+![Desktop View](/assets/img/REMnux/3.png){: width="700" height="400" }
+
+### Attackbox
+
+From this VM, open a browser and go to our REMnux's IP address using the command `https://10.10.151.53`. This will prompt a Security Risk; ignore it, click Advance, then Accept the Risk and Continue.
+
+Once done, you should be redirected to the INetSim's homepage!
+
+One usual malware behaviour is downloading another binary or script. We will try to mimic this behaviour by getting another file from INetsim. We can do this via the CLI or browser, but let's use the CLI to make it more realistic. Use this command: `sudo wget https://10.10.151.53/second_payload.zip --no-check-certificate`
+
+![Desktop View](/assets/img/REMnux/4.png){: width="700" height="400" }
+
+You can try downloading another file as well. For example, try downloading second_payload.ps1 by using the command:`sudo wget https://10.10.151.53/second_payload.ps1 --no-check-certificate`.
+
+![Desktop View](/assets/img/REMnux/5.png){: width="700" height="400" }
+
+All of these are fake files! Try to open the second_payload.ps1. When executed, this will direct you to INetSim's homepage.
+
+What we did here is mimic a malware's behaviour, wherein it will try to reach out to a server or URL and then download a secondary file that may contain another malware.
+
+---
+
+### Connection Report
+
+Lastly, go back to your REMnux VM and stop INetSim. By default, it will create a report on its captured connections. This is usually saved in /var/log/inetsim/report/ directory.
+
+Read the file using this command `sudo cat /var/log/inetsim/report/report.2594.txt`
+
+These are the logs when the tool was running. We can see the connections made to the URL, the protocol, and the method it's using. We can also see the fake file that was downloaded.
+
+![Desktop View](/assets/img/REMnux/6.png){: width="700" height="400" }
+
+---
+
+### Challenge
+
+#### Download and scan the file named flag.txt from the terminal using the command sudo wget https://10.10.151.53/flag.txt --no-check-certificate. What is the flag?
+
+![Desktop View](/assets/img/REMnux/7.png){: width="700" height="400" }
+
+`Tryhackme{remnux_edition}`
+
+#### After stopping the inetsim, read the generated report. Based on the report, what URL Method was used to get the file flag.txt?
+
+![Desktop View](/assets/img/REMnux/8.png){: width="700" height="400" }
