--- a/_posts/TryHackMe/REMnux/2025-07-29-REMnux.md
+++ b/_posts/TryHackMe/REMnux/2025-07-29-REMnux.md
@@ -4,8 +4,10 @@ title: "REMnux: Getting Started"
 date: 2025-07-29 09:00:00 -0700
 categories: [Malware Analysis, Reverse Engineering, Blue Team]
 tags: [THM, REMnux, Malware Analysis, Reverse Engineering, Linux, DFIR]
-description: Learn how to use the tools included in the REMnux virtual machine for malware analysis and reverse engineering. Explore its capabilities through the TryHackMe REMnux: Getting Started room.
+description: Learn how to use the tools included in the REMnux virtual machine for malware analysis and reverse engineering. Explore its capabilities through the TryHackMe REMnux Getting Started room.
 ---
+
+## REMnux Intro
 
 > **Note**
 > The REMnux VM is a specialised Linux distro. It already includes tools like Volatility, YARA, Wireshark, oledump, and INetSim. It also provides a sandbox-like environment for dissecting potentially malicious software without risking your primary system. It's your lab set up and ready to go without the hassle of manual installations.
