--- a/_posts/KC7/KQL 101/2025-08-14-KQL102.md
+++ b/_posts/KC7/KQL 101/2025-08-14-KQL102.md
@@ -91,3 +91,52 @@ What if we wanted to see all the URLs browsed by employees with the name William
 #### How many authentication attempts did we see to the accounts of employees with the first name William?
 
 ![Desktop View](/assets/img/KQL102/7.png){: width="700" height="400" }
+
+`183`
+
+---
+
+By grabbing just the first 10 rows, you can get an overview of the structure and contents without having to sift through massive amounts of data. This helps you decide where to focus your investigation and identify any key patterns or anomalies early on.
+
+#### What IP address did they forget to hide in the poster?
+
+`55.49.227.170`
+
+![Desktop View](/assets/img/KQL102/8.png){: width="700" height="400" }
+
+#### Is there any evidence of traffic from this IP address to our network? (yes/no)
+
+![Desktop View](/assets/img/KQL102/9.png){: width="700" height="400" }
+
+---
+
+PassiveDNS is a tool that keeps a record of which domain names (like websites) have been connected to specific IP addresses over time. This allows us to look back and see which websites or services might have used a particular IP, helping us track any suspicious or malicious activity
+
+#### How many domains resolved to the IP 55.49.**.***?
+
+`2`
+
+![Desktop View](/assets/img/KQL102/10.png){: width="700" height="400" }
+
+#### What is the Valdoria related domain resolving to that IP?
+
+`valdoriavotesgov.com`
+
+#### What is the legitimate domain for the Valdoria Elections Board?
+
+`valdoriavotes.gov`
+
+---
+
+Let’s pivot on the fake Valdoria domain to see if it’s been associated with other IPs.
+
+#### How many IP addresses did the fraudulent Valdoria government domain resolve to?
+
+![Desktop View](/assets/img/KQL102/11.png){: width="700" height="400" }
+
+#### Which table should we be looking at for records of that kind of activity again?
+
+`InboundNetworkEvents`
+
+#### How many requests do we see to our network from those IPs?
+
