added more to kql 102

--- a/_posts/KC7/KQL 101/2025-08-14-KQL102.md
+++ b/_posts/KC7/KQL 101/2025-08-14-KQL102.md
@@ -140,3 +140,43 @@ Let’s pivot on the fake Valdoria domain to see if it’s been associated with 
 
 #### How many requests do we see to our network from those IPs?
 
+![Desktop View](/assets/img/KQL102/12.png){: width="700" height="400" }
+
+#### Which phase of the Cyber Kill Chain is this called?
+
+`recon;reconnaissance`
+
+We can learn a lot more about the threat actor's motives by analyzing their browsing history. Let’s dig deeper!
+
+In the first record we have of their activity, the hackers seemed focused on learning more about a certain group at the Valdoria Board of Elections.
+
+#### What group were they specifically interested in?
+
+`new hires`
+
+They left a pretty clear clue about their intentions by researching our ability to prevent malicious activity.
+
+#### What specific area of our prevention measures were the threat actors interested in?
+
+`election interference`
+
+We’re onto them and starting to get a clearer picture of their plans! Let’s keep digging through their browsing history to see exactly how they intended to interfere with the election.
+
+#### What important machines were the hackers trying to get into? (two words)
+
+`voting machines`
+
+The hackers even tried to locate a specific document that would reveal exactly how the machines operate.
+
+With this information—like configuration details or default passwords—they could create a more effective plan to hack the machines.
+
+#### Which document were the hackers looking for? (two words)
+
+`technical manual`
+
+So we know they were targeting voting machines, but did they actually succeed?
+
+Let’s look for evidence in our data. Remember, there was a suspicious-looking Valdoria domain registered by the adversaries.
+
+#### Let’s check if there’s any traffic to it—has any of our employees visited that domain for any reason? (yes/no)
+
